--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script async src="https://kit.fontawesome.com/055ec1b7d6.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/055ec1b7d6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./src/index.css">
-    <title>Blog</title>
+    <title>Blogger</title>
   </head>
   <body>
     <div id="root" class=" min-w-[320px]"></div>
-    <script async type="module" src="/src/main.jsx"></script>
-    <script async src="./node_modules/animejs/lib/anime.min.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
+    <script src="./node_modules/animejs/lib/anime.min.js"></script>
   </body>
 </html>
